--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.F1Trivia"
         tools:targetApi="31">
         <activity
+            android:name=".ui.leaderboard.LeaderboardActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.ChangeUsernameActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.login.UsernameActivity"
             android:exported="false" />
         <activity
